# lecture_osap

./: .clang-format  .gitignore  CMakeLists.txt  decorator_pattern.cpp  factory_method_pattern_before.cpp  main.cpp  strategy_pattern_before.cpp
GoogleTestAssertionsOnVectors/: CMakeLists.txt  library_code.h  test_runner.cc
GoogleTestFixtures/GoogleTest-fixtures/: CMakeLists.txt  library_code.cc  library_code.h  test_runner.cc
GoogleTestFixtures/GoogleTest-no-fixtures/: CMakeLists.txt  library_code.cc  library_code.h  test_runner.cc
GoogleTestParmeterizedTests/: CMakeLists.txt  library_code.cc  library_code.h  test_runner.cc
GoogleTestPractice_1/: CMakeLists.txt  library_code.cc  test_runner.cc
GoogleTestQuickStart/: CMakeLists.txt  main.cc
GoogleTestSimple/: CMakeLists.txt  library_code.cc  library_code.h  main.cc  test_runner.cc
decorator_pattern/: decorator_pattern.cpp
design_patterns/: adapter_pattern_class.cpp  adapter_pattern_instance.cpp  factory_method_pattern_after_step1.cpp  factory_method_pattern_after_step2.cpp  state_pattern_after.cpp  state_pattern_before.cpp  strategy_pattern_after.cpp
practices_1/: CMakeLists.txt  adapter_pattern_class.cpp  adapter_pattern_instance.cpp  state_pattern.cpp  strategy_pattern.cpp
